--- a/index.html
+++ b/index.html
@@ -1,97 +1,68 @@
 <!doctype html>
-<html lang="bn">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ব্লগার ইউআরএল শর্টনার</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+<html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>URL Shortener</title>
 <body>
-  <main class="card">
-    <h1>ব্লগার ইউআরএল শর্টনার</h1>
-    <p class="muted">তোমার বড় লিংক বসাও, ছোট লিংক পেয়ে যাও!</p>
+<h3>URL Shortener</h3>
 
-    <form id="shortenForm">
-      <label>আসল লিংক</label>
-      <input id="longUrl" type="url" placeholder="https://example.com" required>
+<form id="f">
+  <input id="u" placeholder="https://example.com" required><br>
+  <input id="c" placeholder="Custom name (optional)"><br>
+  <input id="t" placeholder="Title (optional)"><br>
+  <button type="submit">Shorten</button>
+</form>
+<a href="url">stats</a>
 
-      <label>কাস্টম নাম (ঐচ্ছিক)</label>
-      <input id="custom" type="text" placeholder="যেমন: amarblog" maxlength="30" pattern="[A-Za-z0-9-_]{3,30}">
+<p id="o"></p>
+<p id="err" style="color:red"></p>
 
-      <button type="submit">লিংক ছোট করো</button>
-    </form>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
+  import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js";
 
-    <div id="result" class="hidden">
-      <p>তোমার ছোট লিংক:</p>
-      <a id="shortLink" href="#" target="_blank"></a>
-    </div>
+  // ✅ তোমার নতুন Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyAHWskypzeWEHDqfSB6UyViji90LKt4Wt0",
+    authDomain: "my-new-shorurl.firebaseapp.com",
+    databaseURL: "https://my-new-shorurl-default-rtdb.firebaseio.com/",
+    projectId: "my-new-shorurl",
+    storageBucket: "my-new-shorurl.firebasestorage.app",
+    messagingSenderId: "974476613807",
+    appId: "1:974476613807:web:7f2f35b4d9691bb69b1c5a",
+    measurementId: "G-8ZDY26JDFQ"
+  };
 
-    <div id="error" class="error hidden"></div>
-  </main>
+  // ✅ Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-    import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js";
+  // Random short code generator
+  const random = n => [...Array(n)].map(()=>"ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnpqrstuvwxyz23456789"[Math.random()*58|0]).join("");
+  const exists = async id => (await get(child(ref(db),"urls/"+id))).exists();
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCyZImg-Uh79qppoJjyr3WIkCqPaE4MFFc",
-      authDomain: "turty-2f096.firebaseapp.com",
-      projectId: "turty-2f096",
-      storageBucket: "turty-2f096.firebasestorage.app",
-      messagingSenderId: "292943379883",
-      appId: "1:292943379883:web:c9ac1161226993b90b66ee",
-      databaseURL: "https://mimtyllb-default-rtdb.firebaseio.com/"
-    };
+  // Form handler
+  f.onsubmit = async e => {
+    e.preventDefault();
+    err.textContent = "";
+    o.textContent = "";
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
+    let url = u.value.trim();
+    if (!/^https?:\/\//i.test(url)) url = "https://" + url;
 
-    const form = document.getElementById("shortenForm");
-    const longUrlInput = document.getElementById("longUrl");
-    const customInput = document.getElementById("custom");
-    const resultDiv = document.getElementById("result");
-    const shortLinkA = document.getElementById("shortLink");
-    const errorDiv = document.getElementById("error");
+    let id = c.value.trim() || random(6);
+    if (await exists(id)) { err.textContent = "This custom name already exists!"; return; }
 
-    function randomCode(len = 6) {
-      const chars = "ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnpqrstuvwxyz23456789";
-      return Array.from({ length: len }, () => chars[Math.floor(Math.random() * chars.length)]).join("");
-    }
-
-    async function exists(short) {
-      const snapshot = await get(child(ref(db), "urls/" + short));
-      return snapshot.exists();
-    }
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      errorDiv.classList.add("hidden");
-      resultDiv.classList.add("hidden");
-
-      let longUrl = longUrlInput.value.trim();
-      if (!/^https?:\/\//i.test(longUrl)) longUrl = "https://" + longUrl;
-
-      let short = customInput.value.trim();
-      if (!short) {
-        do { short = randomCode(); } while (await exists(short));
-      } else {
-        if (await exists(short)) {
-          errorDiv.textContent = "এই নামটি আগেই নেওয়া হয়েছে!";
-          errorDiv.classList.remove("hidden");
-          return;
-        }
-      }
-
-      await set(ref(db, "urls/" + short), {
-        longUrl: longUrl,
-        createdAt: Date.now()
-      });
-
-      const shortUrl = `${location.origin}/redirect.html?id=${short}`;
-      shortLinkA.href = shortUrl;
-      shortLinkA.textContent = shortUrl;
-      resultDiv.classList.remove("hidden");
+    await set(ref(db, "urls/" + id), {
+      longUrl: url,
+      title: t.value.trim(),
+      createdAt: Date.now()
     });
-  </script>
+
+    const short = location.origin + "/redirect.html?id=" + id;
+    o.innerHTML = `<input value="${short}" id="x" size="35">
+                   <button onclick="navigator.clipboard.writeText(x.value)">Copy</button>`;
+  };
+</script>
 </body>
 </html>
