--- a/redirect.html
+++ b/redirect.html
@@ -6,16 +6,13 @@
   <title>Redirecting...</title>
 </head>
 <body>
-  <script type="module">
-    (async () => {
-      const id = new URL(location.href).searchParams.get("id");
-      if (!id) return location.replace("https://fgchdrr-4som-git-main-parves-sikdars-projects.vercel.app");
+<script type="module">
+  const id = new URL(location.href).searchParams.get("id");
+  if (!id) location.replace("https://fgchdrr-4som-git-main-parves-sikdars-projects.vercel.app");
 
-      const { initializeApp } = await import("https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js");
-      const { getDatabase, ref, get, child } = await import("https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js");
-
-      // Updated Firebase configuration
-      const firebaseConfig = {
+  import("https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js").then(({ initializeApp }) => {
+    import("https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js").then(({ getDatabase, ref, get, child }) => {
+      const app = initializeApp({
         apiKey: "AIzaSyAHWskypzeWEHDqfSB6UyViji90LKt4Wt0",
         authDomain: "my-new-shorurl.firebaseapp.com",
         databaseURL: "https://my-new-shorurl-default-rtdb.firebaseio.com/",
@@ -24,19 +21,16 @@
         messagingSenderId: "974476613807",
         appId: "1:974476613807:web:7f2f35b4d9691bb69b1c5a",
         measurementId: "G-8ZDY26JDFQ"
-      };
+      });
 
-      const app = initializeApp(firebaseConfig);
       const db = getDatabase(app);
 
-      try {
-        const snap = await get(child(ref(db), "urls/" + id));
-        if (snap.exists()) location.replace(snap.val().longUrl);
-        else location.replace("https://fgchdrr-4som-git-main-parves-sikdars-projects.vercel.app");
-      } catch {
-        location.replace("https://fgchdrr-4som-git-main-parves-sikdars-projects.vercel.app");
-      }
-    })();
-  </script>
+      get(child(ref(db), "urls/" + id))
+        .then(snap => snap.exists() ? location.replace(snap.val().longUrl) :
+          location.replace("https://fgchdrr-4som-git-main-parves-sikdars-projects.vercel.app"))
+        .catch(() => location.replace("https://fgchdrr-4som-git-main-parves-sikdars-projects.vercel.app"));
+    });
+  });
+</script>
 </body>
 </html>
