--- a/Signup.html
+++ b/Signup.html
@@ -359,11 +359,11 @@
                 </a>
                 <ul class="nav-links">
                     <li><a href="home.html">হোম</a></li>
-                    <li><a href="home.html#services">সেবাসমূহ</a></li>
-                    <li><a href="home.html#formats">এড ফরম্যাট</a></li>
-                    <li><a href="home.html#publishers">প্রকাশক</a></li>
-                    <li><a href="home.html#advertisers">বিজ্ঞাপনদাতা</a></li>
-                    <li><a href="home.html#contact">যোগাযোগ</a></li>
+                    <li><a href="home.html">সেবাসমূহ</a></li>
+                    <li><a href="home.html">এড ফরম্যাট</a></li>
+                    <li><a href="home.html">প্রকাশক</a></li>
+                    <li><a href="home.html">বিজ্ঞাপনদাতা</a></li>
+                    <li><a href="home.html">যোগাযোগ</a></li>
                 </ul>
                 <div class="auth-buttons">
                     <a href="Signup.html" class="btn btn-primary">
