--- a/deshbord.html
+++ b/deshbord.html
@@ -1589,7 +1589,7 @@
       <span class="close" id="closeGetCodeModal">&times;</span>
     </div>
     <div class="modal-body">
-      <p>Copy and paste this code into the <code>&lt;head&gt;</code> section of your website:</p>
+      <p>Remove your theme <code>code</code> and add this code:</p>
       <pre id="codeSnippet">
 &lt;?xml version="1.0" encoding="UTF-8"?&gt;
 &lt;!DOCTYPE html&gt;
